fix(desktop): complete key russian UI translations and drop PRD file
Signed-off-by: Vadim Polulyakh <bavadim@gmail.com>

--- a/ui/desktop/src/i18n/ru.json
+++ b/ui/desktop/src/i18n/ru.json
@@ -13,10 +13,10 @@
     "cancel": "Отмена",
     "retry": "Повторить",
     "error": "ошибка",
-    "delete": "Delete",
-    "save": "Save",
-    "remove": "Remove",
-    "or": "or"
+    "delete": "Удалить",
+    "save": "Сохранить",
+    "remove": "Убрать",
+    "or": "или"
   },
   "launcher": {
     "placeholder": "Спросите goose о чем угодно..."
@@ -47,11 +47,11 @@
     "expand_details": "Развернуть детали",
     "show_less": "Скрыть",
     "show_details": "Показать детали",
-    "title": "Extensions",
-    "default_usage": "Extensions enabled here are used as the default for new chats. You can also toggle active extensions during chat.",
-    "add_custom": "Add custom extension",
-    "browse": "Browse extensions",
-    "add_action": "Add Extension"
+    "title": "Расширения",
+    "default_usage": "Расширения, включенные здесь, используются по умолчанию для новых чатов. Активные расширения также можно переключать во время чата.",
+    "add_custom": "Добавить пользовательское расширение",
+    "browse": "Просмотреть расширения",
+    "add_action": "Добавить расширение"
   },
   "schedule": {
     "every": "Каждый",
@@ -183,25 +183,25 @@
     "share_disabled": "Публикация сессий отключена или не задан base URL.",
     "share_failed": "Не удалось поделиться сессией: {error}",
     "share_not_configured": "Публикация сессий не настроена. Настройте ее в параметрах.",
-    "duplicated": "Session \"{name}\" duplicated successfully",
-    "duplicate_failed": "Failed to duplicate session: {error}",
-    "deleted_success": "Session deleted successfully",
-    "delete_failed": "Failed to delete session \"{name}\": {error}",
-    "exported_success": "Session exported successfully",
-    "imported_success": "Session imported successfully",
-    "import_failed": "Failed to import session: {error}",
-    "extensions": "Extensions",
-    "open_new_window": "Open in new window",
-    "edit_name": "Edit session name",
-    "duplicate": "Duplicate session",
-    "delete": "Delete session",
-    "export": "Export session",
-    "chat_history": "Chat history",
-    "import": "Import Session",
-    "history_help": "View and search your past conversations with Goose. {shortcut} to search.",
-    "delete_modal_title": "Delete Session",
-    "delete_modal_desc": "Are you sure you want to delete the session \"{name}\"? This action cannot be undone.",
-    "delete_modal_confirm": "Delete Session"
+    "duplicated": "Сессия \"{name}\" успешно дублирована",
+    "duplicate_failed": "Не удалось дублировать сессию: {error}",
+    "deleted_success": "Сессия успешно удалена",
+    "delete_failed": "Не удалось удалить сессию \"{name}\": {error}",
+    "exported_success": "Сессия успешно экспортирована",
+    "imported_success": "Сессия успешно импортирована",
+    "import_failed": "Не удалось импортировать сессию: {error}",
+    "extensions": "Расширения",
+    "open_new_window": "Открыть в новом окне",
+    "edit_name": "Изменить название сессии",
+    "duplicate": "Дублировать сессию",
+    "delete": "Удалить сессию",
+    "export": "Экспортировать сессию",
+    "chat_history": "История чатов",
+    "import": "Импортировать сессию",
+    "history_help": "Просматривайте и ищите прошлые диалоги с Goose. {shortcut} для поиска.",
+    "delete_modal_title": "Удалить сессию",
+    "delete_modal_desc": "Вы уверены, что хотите удалить сессию \"{name}\"? Это действие нельзя отменить.",
+    "delete_modal_confirm": "Удалить сессию"
   },
   "recipes": {
     "title": "Рецепты",
@@ -215,52 +215,52 @@
     "schedule_add": "Добавить расписание",
     "schedule_edit": "Редактировать расписание",
     "schedule_remove": "Удалить расписание",
-    "delete_title": "Delete Recipe",
-    "delete_confirm": "Are you sure you want to delete \"{name}\"?",
-    "delete_detail": "Recipe file will be deleted.",
-    "deleted_success": "Recipe deleted successfully",
-    "deeplink_copied": "Deeplink copied",
-    "deeplink_copied_msg": "Recipe deeplink has been copied to clipboard",
-    "copy_failed": "Copy failed",
-    "copy_deeplink_failed": "Failed to copy deeplink to clipboard",
-    "yaml_copied": "YAML copied",
-    "yaml_copied_msg": "Recipe YAML has been copied to clipboard",
-    "copy_yaml_failed": "Failed to copy recipe YAML to clipboard",
-    "export_title": "Export Recipe",
-    "yaml_files": "YAML Files",
-    "all_files": "All Files",
-    "exported": "Recipe exported",
-    "exported_msg": "Recipe saved to {path}",
-    "export_failed": "Export failed",
-    "export_failed_msg": "Failed to export recipe to file",
-    "schedule_saved": "Schedule saved",
-    "schedule_saved_msg": "Recipe will run {cron}",
-    "schedule_removed": "Schedule removed",
-    "schedule_removed_msg": "Recipe will no longer run automatically",
-    "slash_saved": "Slash command saved",
-    "slash_saved_msg": "Use /{command} to run this recipe",
-    "slash_removed": "Slash command removed",
-    "slash_removed_msg": "Recipe slash command has been removed",
-    "runs": "Runs {cron}",
-    "edit_slash": "Edit slash command",
-    "add_slash": "Add slash command",
-    "use": "Use recipe",
-    "open_new_window": "Open in new window",
-    "edit": "Edit recipe",
-    "share": "Share recipe",
-    "copy_deeplink": "Copy Deeplink",
-    "copy_yaml": "Copy YAML",
-    "export_to_file": "Export to File",
-    "delete": "Delete recipe",
-    "slash_title": "Slash Command",
-    "slash_help": "Set a slash command to quickly run this recipe from any chat",
-    "slash_placeholder": "command-name",
-    "slash_usage": "Use /{command} in any chat to run this recipe",
-    "extensions_optional": "Extensions (Optional)",
-    "extensions_help": "Select which extensions should be available when running this recipe. Leave empty to use default extensions.",
-    "extensions_selected": "{count} extension{suffix} selected",
-    "no_extensions_found": "No extensions found",
-    "no_extensions_available": "No extensions available"
+    "delete_title": "Удалить рецепт",
+    "delete_confirm": "Вы уверены, что хотите удалить \"{name}\"?",
+    "delete_detail": "Файл рецепта будет удален.",
+    "deleted_success": "Рецепт успешно удален",
+    "deeplink_copied": "Deeplink скопирован",
+    "deeplink_copied_msg": "Deeplink рецепта скопирован в буфер обмена",
+    "copy_failed": "Ошибка копирования",
+    "copy_deeplink_failed": "Не удалось скопировать deeplink в буфер обмена",
+    "yaml_copied": "YAML скопирован",
+    "yaml_copied_msg": "YAML рецепта скопирован в буфер обмена",
+    "copy_yaml_failed": "Не удалось скопировать YAML рецепта в буфер обмена",
+    "export_title": "Экспорт рецепта",
+    "yaml_files": "YAML файлы",
+    "all_files": "Все файлы",
+    "exported": "Рецепт экспортирован",
+    "exported_msg": "Рецепт сохранен в {path}",
+    "export_failed": "Ошибка экспорта",
+    "export_failed_msg": "Не удалось экспортировать рецепт в файл",
+    "schedule_saved": "Расписание сохранено",
+    "schedule_saved_msg": "Рецепт будет запускаться {cron}",
+    "schedule_removed": "Расписание удалено",
+    "schedule_removed_msg": "Рецепт больше не будет запускаться автоматически",
+    "slash_saved": "Slash-команда сохранена",
+    "slash_saved_msg": "Используйте /{command}, чтобы запускать этот рецепт",
+    "slash_removed": "Slash-команда удалена",
+    "slash_removed_msg": "Slash-команда рецепта удалена",
+    "runs": "Запуск {cron}",
+    "edit_slash": "Редактировать slash-команду",
+    "add_slash": "Добавить slash-команду",
+    "use": "Использовать рецепт",
+    "open_new_window": "Открыть в новом окне",
+    "edit": "Редактировать рецепт",
+    "share": "Поделиться рецептом",
+    "copy_deeplink": "Скопировать Deeplink",
+    "copy_yaml": "Скопировать YAML",
+    "export_to_file": "Экспортировать в файл",
+    "delete": "Удалить рецепт",
+    "slash_title": "Slash-команда",
+    "slash_help": "Задайте slash-команду для быстрого запуска рецепта из любого чата",
+    "slash_placeholder": "имя-команды",
+    "slash_usage": "Используйте /{command} в любом чате, чтобы запустить этот рецепт",
+    "extensions_optional": "Расширения (необязательно)",
+    "extensions_help": "Выберите расширения, которые должны быть доступны при запуске этого рецепта. Оставьте пустым, чтобы использовать расширения по умолчанию.",
+    "extensions_selected": "Выбрано расширений: {count}{suffix}",
+    "no_extensions_found": "Расширения не найдены",
+    "no_extensions_available": "Расширения недоступны"
   },
   "provider": {
     "other": "Другие провайдеры",
@@ -276,24 +276,24 @@
     "stop": "Остановить туннель",
     "retry": "Повторить",
     "start": "Запустить туннель",
-    "status_idle": "Tunnel is not running",
-    "status_starting": "Starting tunnel...",
-    "status_running": "Tunnel is active",
-    "status_error": "Tunnel encountered an error",
-    "status_disabled": "Tunnel is disabled",
-    "preview": "Preview feature:",
-    "preview_desc": "Enable remote access to goose from mobile devices using secure tunneling.",
-    "get_ios": "Get the iOS app",
-    "scan_qr": "scan QR code",
+    "status_idle": "Туннель не запущен",
+    "status_starting": "Запуск туннеля...",
+    "status_running": "Туннель активен",
+    "status_error": "Ошибка туннеля",
+    "status_disabled": "Туннель отключен",
+    "preview": "Предпросмотр функции:",
+    "preview_desc": "Включите удаленный доступ к goose с мобильных устройств через защищенный туннель.",
+    "get_ios": "Скачать iOS-приложение",
+    "scan_qr": "сканировать QR-код",
     "url": "URL:",
-    "connection": "Remote Access Connection",
-    "qr_help": "Scan this QR code with the goose mobile app. Do not share this code with anyone else as it is for your personal access.",
-    "connection_details": "Connection Details",
-    "tunnel_url": "Tunnel URL",
-    "secret_key": "Secret Key",
-    "download_ios": "Download goose iOS App",
-    "appstore_qr_help": "Scan this QR code with your iPhone camera to install the goose mobile app from the App Store",
-    "open_app_store": "Open in App Store"
+    "connection": "Подключение удаленного доступа",
+    "qr_help": "Сканируйте этот QR-код в мобильном приложении goose. Не делитесь этим кодом с другими, он предназначен для личного доступа.",
+    "connection_details": "Данные подключения",
+    "tunnel_url": "URL туннеля",
+    "secret_key": "Секретный ключ",
+    "download_ios": "Скачать приложение goose для iOS",
+    "appstore_qr_help": "Сканируйте этот QR-код камерой iPhone, чтобы установить мобильное приложение goose из App Store",
+    "open_app_store": "Открыть в App Store"
   },
   "settings": {
     "appearance": "Внешний вид",
@@ -305,38 +305,38 @@
     "version": "Версия",
     "updates": "Обновления",
     "updates_desc": "Проверяйте и устанавливайте обновления, чтобы goose работал стабильно",
-    "notifications": "Notifications",
-    "notifications_desc": "Notifications are managed by your OS",
-    "configuration_guide": "Configuration guide",
-    "open_settings": "Open Settings",
-    "menu_bar_icon": "Menu bar icon",
-    "menu_bar_icon_desc": "Show goose in the menu bar",
-    "dock_icon": "Dock icon",
-    "dock_icon_desc": "Show goose in the dock",
-    "prevent_sleep": "Prevent Sleep",
-    "prevent_sleep_desc": "Keep your computer awake while goose is running a task (screen can still lock)",
-    "cost_tracking": "Cost Tracking",
-    "cost_tracking_desc": "Show model pricing and usage costs",
-    "report_bug": "Report a Bug",
-    "request_feature": "Request a Feature",
-    "development": "Development",
-    "enable_notifications": "How to Enable Notifications",
-    "enable_notifications_macos": "To enable notifications on macOS:",
-    "notify_macos_1": "Open System Preferences",
-    "notify_macos_2": "Click on Notifications",
-    "notify_macos_3": "Find and select goose in the application list",
-    "notify_macos_4": "Enable notifications and adjust settings as desired",
-    "enable_notifications_windows": "To enable notifications on Windows:",
-    "notify_windows_1": "Open Settings",
-    "notify_windows_2": "Go to System > Notifications",
-    "notify_windows_3": "Find and select goose in the application list",
-    "notify_windows_4": "Toggle notifications on and adjust settings as desired"
+    "notifications": "Уведомления",
+    "notifications_desc": "Уведомления управляются вашей ОС",
+    "configuration_guide": "Руководство по настройке",
+    "open_settings": "Открыть настройки",
+    "menu_bar_icon": "Иконка в строке меню",
+    "menu_bar_icon_desc": "Показывать goose в строке меню",
+    "dock_icon": "Иконка в доке",
+    "dock_icon_desc": "Показывать goose в доке",
+    "prevent_sleep": "Не давать системе спать",
+    "prevent_sleep_desc": "Держать компьютер активным, пока goose выполняет задачу (экран может блокироваться)",
+    "cost_tracking": "Учет стоимости",
+    "cost_tracking_desc": "Показывать цены моделей и стоимость использования",
+    "report_bug": "Сообщить об ошибке",
+    "request_feature": "Запросить функцию",
+    "development": "Разработка",
+    "enable_notifications": "Как включить уведомления",
+    "enable_notifications_macos": "Чтобы включить уведомления на macOS:",
+    "notify_macos_1": "Откройте System Preferences",
+    "notify_macos_2": "Нажмите Notifications",
+    "notify_macos_3": "Найдите и выберите goose в списке приложений",
+    "notify_macos_4": "Включите уведомления и настройте параметры",
+    "enable_notifications_windows": "Чтобы включить уведомления в Windows:",
+    "notify_windows_1": "Откройте Settings",
+    "notify_windows_2": "Перейдите в System > Notifications",
+    "notify_windows_3": "Найдите и выберите goose в списке приложений",
+    "notify_windows_4": "Включите уведомления и настройте параметры"
   },
   "search": {
-    "case_sensitive": "Case Sensitive",
-    "previous": "Previous (↑)",
-    "next": "Next (↓ or Enter)",
-    "close": "Close (Esc)"
+    "case_sensitive": "С учетом регистра",
+    "previous": "Предыдущий (↑)",
+    "next": "Следующий (↓ или Enter)",
+    "close": "Закрыть (Esc)"
   },
   "unknown": {
     "key": "Fallback value"
